<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_head"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/main_head_underline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:gravity="center|bottom"
            android:text="@string/main_head_my"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:gravity="center|bottom"
            android:text="@string/main_head_find"
            android:textColor="@color/dimGrey"
            android:textSize="21sp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:gravity="center|bottom"
            android:text="@string/main_head_yuncun"
            android:textColor="@color/dimGrey"
            android:textSize="21sp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:gravity="center|bottom"
            android:text="@string/main_head_video"
            android:textColor="@color/dimGrey"
            android:textSize="21sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/main_songSheet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_content_title_songSheet"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_head"/>

    <ImageView
        android:id="@+id/main_add"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_new"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/main_songSheet_title"
        app:layout_constraintTop_toBottomOf="@id/main_head"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ListView
        android:id="@+id/main_listView_songSheet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_songSheet_title"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>